@@ -3,6 +3,7 @@ V1.1.4 Saturday, January 19 2013
  +Fixed Visual deselection bug where parcellite was doing unnecessary updates.
  +Changed appindicator usage. If indicator-appmenu is not strstr found, then use old status icon.
     This change should revert icon behaviour back to pre-libappindicator, for WMs that are not Unity.
+ +Added History to popup menu when running Unity.
 
 V1.1.3 Thursday, January 17 2013
  Changes
